apps/staging/jellyfin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  hostnames:
    - jellyfin-staging.passer.home.arpa
