apps/staging/nextcloud-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  hostnames:
    - nextcloud-staging.passer.lan
